--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -8,6 +8,7 @@
           </div>
         </mat-card-header>
         <mat-card-content>
+          <!-- Conteúdo Cabeçalho -->
           <div class="container-fluid">
             <div class="row">
               <div class="col-6"></div>
@@ -32,6 +33,7 @@
             </div>
           </div>
 
+          <!-- Grid de Produtos -->
           <div class="container-fluid" *ngIf="!typeAdd">
             <div class="row mt-3">
               <div class="col-12">
@@ -43,20 +45,36 @@
                   <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef width="11%">Ação</th>
                     <td mat-cell *matCellDef="let element">
-                      <button
+                      <!--
+                        <button
                         mat-icon-button
                         color="primary"
+                        (click)="editar(element)"
                         aria-label="Edição do produto"
                       >
                         <mat-icon>edit</mat-icon>
                       </button>
+                      -->
+                      <app-botao
+                      cor="primary"
+                      icone="edit"
+                      (retorno)="editar(element)"
+                      ></app-botao>
+                      <!--
                       <button
                         mat-icon-button
                         color="warn"
+                        (click)="deletar(element.id)"
                         aria-label="Exclusão do produto"
                       >
                         <mat-icon>delete</mat-icon>
                       </button>
+                      -->
+                      <app-botao
+                      cor="warn"
+                      icone="delete"
+                      (click)="deletar(element.id)"
+                      ></app-botao>
                     </td>
                   </ng-container>
 
@@ -86,14 +104,14 @@
                   <ng-container matColumnDef="cost">
                     <th mat-header-cell *matHeaderCellDef>Custo</th>
                     <td mat-cell *matCellDef="let element">
-                      {{ element.cost }}
+                      {{ element.cost | currency : "BRL" }}
                     </td>
                   </ng-container>
 
                   <ng-container matColumnDef="price">
                     <th mat-header-cell *matHeaderCellDef>Preço</th>
                     <td mat-cell *matCellDef="let element">
-                      {{ element.price }}
+                      {{ element.price | currency : "BRL" }}
                     </td>
                   </ng-container>
 
@@ -107,42 +125,56 @@
             </div>
           </div>
 
+          <!-- Tela de Cadastro -->
           <div class="container-fluid" *ngIf="typeAdd">
             <div class="row">
               <div class="col-12">
                 <form [formGroup]="form">
                   <div class="row">
                     <div class="col-2">
-                      <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Sku</mat-label>
-                        <input matInput placeholder="" formControlName="sku" />
-                      </mat-form-field>
+                      <app-input
+                        [form]="form"
+                        controlName="sku"
+                        label="Sku"
+                      ></app-input>
                     </div>
+                    <div class="col-10">
+                      <app-input
+                        [form]="form"
+                        controlName="name"
+                        label="Nome do Produto"
+                      ></app-input>
+                    </div>
+                    <!--
                     <div class="col-10">
                       <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Produto</mat-label>
                         <input matInput placeholder="" formControlName="name" />
                       </mat-form-field>
                     </div>
+                     -->
                   </div>
                   <div class="row">
                     <div class="col-4">
-                      <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Estoque</mat-label>
-                        <input matInput placeholder="" formControlName="stock" />
-                      </mat-form-field>
+                      <app-numeral
+                        [form]="form"
+                        controlName="stock"
+                        label="Estoque"
+                      ></app-numeral>
                     </div>
                     <div class="col-4">
-                      <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Custo</mat-label>
-                        <input matInput placeholder="" formControlName="cost" />
-                      </mat-form-field>
+                      <app-monetario
+                        [form]="form"
+                        controlName="cost"
+                        label="Custo"
+                      ></app-monetario>
                     </div>
                     <div class="col-4">
-                      <mat-form-field appearance="outline" class="w-100">
-                        <mat-label>Preço</mat-label>
-                        <input matInput placeholder="" formControlName="price" />
-                      </mat-form-field>
+                      <app-monetario
+                        [form]="form"
+                        controlName="price"
+                        label="Preço"
+                      ></app-monetario>
                     </div>
                   </div>
                   <div class="row">
